--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-link {
+bnk {
     text-decoration: underline;
     font-size: 1.5em;
     color: black;
